chore: archive v1.9 milestone files
Archive v1.9 (Season Phases & Groups) — 15 phases (56-70), ~70 plans,
38/38 requirements satisfied. Archive files + audit moved to
.planning/milestones/; ROADMAP.md collapsed; phase directories moved
to .planning/milestones/v1.9-phases/.

Live UAT D-22 confirmed: Saison 2023 driver import on local MariaDB —
287 new drivers, 357 new assignments, 0 errors. JaCoCo 87.02%.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>